# vllm

examples/offline_inference/: prithvi_geospatial_mae.py
requirements/: test.in  test.txt
tests/models/: registry.py
tests/models/multimodal/processing/: test_tensor_schema.py
tests/plugins/prithvi_io_processor_plugin/prithvi_io_processor/: prithvi_processor.py
vllm/: config.py  logger.py
vllm/benchmarks/: datasets.py  serve.py
vllm/benchmarks/lib/: endpoint_request_func.py
vllm/config/: __init__.py
vllm/engine/: arg_utils.py
vllm/engine/multiprocessing/: client.py
vllm/entrypoints/openai/: serving_engine.py  serving_pooling.py
vllm/entrypoints/pooling/pooling/: io_processor.py  serving.py
vllm/instrumentation/: .gitignore  BUILD_INSTRUCTIONS.md  MANIFEST.in  README.md  __init__.py  build.sh  install.sh  io_processor_instrumentor.py  pyproject.toml  setup.py
vllm/model_executor/models/: interfaces.py  prithvi_geospatial_mae.py  registry.py  terratorch.py  timm.py
vllm/v1/core/: kv_cache_manager.py
vllm/v1/core/sched/: scheduler.py
vllm/v1/engine/: core.py  llm_engine.py  output_processor.py  processor.py
vllm/v1/executor/: abstract.py
vllm/v1/worker/: gpu_base_input_batch.py  gpu_base_model_runner.py  gpu_pooling_model_runner.py
