# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: Copyright contributors to the vLLM project

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-instrumentation"
version = "0.1.0"
description = "OpenTelemetry instrumentation for vLLM components"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "vLLM Contributors"}
]
keywords = ["vllm", "opentelemetry", "instrumentation", "tracing", "metrics", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vllm-project/vllm"
Documentation = "https://docs.vllm.ai"
Repository = "https://github.com/vllm-project/vllm"
Issues = "https://github.com/vllm-project/vllm/issues"

[project.entry-points."opentelemetry_instrumentor"]
io_processor = "vllm.instrumentation.io_processor_instrumentor:IOProcessorInstrumentor"

[tool.setuptools]
packages = ["vllm.instrumentation"]

[tool.setuptools.package-data]
"vllm.instrumentation" = ["*.md"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false